--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
             integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
             crossorigin="anonymous"
         >
+        <link rel = "icon" href = "{{ url_for('static', filename='./picture/5.png') }}" type = "image/x-icon">
         <link rel="stylesheet" href="{{ url_for('static', filename='./css/style.css') }}">
     </head>
     <body>
