--- a/templates/index.html
+++ b/templates/index.html
@@ -72,11 +72,11 @@
               <div class="row">
               <div class="col">
                 <label class="form-label fw-bold">Age</label>
-                <input type="number" class="form-control" name="age" required id="age" max="100" min="1" placeholder="Age (1-100)">
+                <input type="number" class="form-control" name="age" required id="age" max="100" min="1" placeholder="(1-100) Age">
               </div>
               <div class="col">
                 <label class="form-label fw-bold">Sex</label>
-                <input type="number" class="form-control" name="sex" required id="sex" max="1" min="0" placeholder="Sex (0=Male or 1=Female)">
+                <input type="number" class="form-control" name="sex" required id="sex" max="1" min="0" placeholder="(0=Male or 1=Female) Sex">
               </div>
               </div>
             </div>
@@ -84,11 +84,11 @@
               <div class="row">
               <div class="col">
                 <label class="form-label fw-bold">Chest Pain</label>
-                <input type="number" class="form-control" name="cp" required id="cp" max="2" min="0" placeholder="Chest Pain (0=ATA, 1=NAP, 2=ASY)">
+                <input type="number" class="form-control" name="cp" required id="cp" max="2" min="0" placeholder="(0=ATA, 1=NAP, 2=ASY) Chest Pain">
               </div>
               <div class="col">
                 <label class="form-label fw-bold">Resting Blood Pressure</label>
-                <input type="number" class="form-control" name="bp" required id="bp" max="200" min="90" placeholder="Resting blood pressure (90 to 200)">
+                <input type="number" class="form-control" name="bp" required id="bp" max="200" min="90" placeholder="(90 to 200) Resting blood pressure">
               </div>
               </div>
             </div>
@@ -96,11 +96,11 @@
               <div class="row">
               <div class="col">
                 <label class="form-label fw-bold">Serum cholestoral</label>
-                <input type="number" class="form-control" name="chol" required id="chol" max="500" min="100" placeholder="Serum cholestoral in mg/dl (100 to 500)">
+                <input type="number" class="form-control" name="chol" required id="chol" max="500" min="100" placeholder="(100 to 500) Serum cholestoral in mg/dl">
               </div>
               <div class="col">
                 <label class="form-label fw-bold">Fasting blood sugar</label>
-                <input type="number" class="form-control" name="fbs" required id="fbs" max="1" min="0" placeholder="Fasting blood sugar > 120 mg/dl (0 = No | 1 = Yes)">
+                <input type="number" class="form-control" name="fbs" required id="fbs" max="1" min="0" placeholder="(0 = No | 1 = Yes) Fasting blood sugar > 120 mg/dl">
               </div>
               </div>
             </div>
@@ -108,11 +108,11 @@
               <div class="row">
               <div class="col">
                 <label class="form-label fw-bold">Resting Electrocardiographic</label>
-                <input type="number" class="form-control" name="restecg" required id="restecg" max="2" min="0" placeholder="Resting electrocardiographic results (values 0=Normal,1=ST,2=LVH)">
+                <input type="number" class="form-control" name="restecg" required id="restecg" max="2" min="0" placeholder="(0=Normal,1=ST,2=LVH) Resting electrocardiographic results">
               </div>
               <div class="col">
                 <label class="form-label fw-bold">Heart rate</label>
-                <input type="number" class="form-control" name="thalach" required id="thalach" max="200" min="70" placeholder="Maximum heart rate achieved (70 to 200)">
+                <input type="number" class="form-control" name="thalach" required id="thalach" max="200" min="70" placeholder="(70 to 200) Maximum heart rate achieved">
               </div>
               </div>
             </div>
@@ -120,11 +120,11 @@
               <div class="row">
               <div class="col">
                 <label class="form-label fw-bold">Exercise induced angina</label>
-                <input type="number" class="form-control" name="exang" required id="exang" max="1" min="0" placeholder="Exercise induced angina (values 0=No,1=Yes)">
+                <input type="number" class="form-control" name="exang" required id="exang" max="1" min="0" placeholder="(0=No,1=Yes) Exercise induced angina">
               </div>
               <div class="col">
                 <label class="form-label fw-bold">Oldpeak</label>
-                <input type="number" class="form-control" name="oldpeak" required id="oldpeak" max="10" min="0" placeholder="Oldpeak (0 to 10)">
+                <input type="number" class="form-control" name="oldpeak" required id="oldpeak" max="10" min="0" placeholder="(0 to 10) Oldpeak">
               </div>
               </div>
             </div>
@@ -132,11 +132,11 @@
               <div class="row">
               <div class="col">
                 <label class="form-label fw-bold">Slope</label>
-                <input type="number" class="form-control" name="slope" required id="slope" max="2" min="0" placeholder="The slope of the peak exercise ST segment (0=Up, 1=Flat, 2=Down)">
+                <input type="number" class="form-control" name="slope" required id="slope" max="2" min="0" placeholder="(0=Up, 1=Flat, 2=Down) The slope of the peak exercise ST segment">
               </div>
               <div class="col">
                 <label class="form-label fw-bold">Number of Major Vessels</label>
-                <input type="number" class="form-control" name="ca" required id="ca" max="10" min="0" placeholder="Number of major vessels (0-3)">
+                <input type="number" class="form-control" name="ca" required id="ca" max="3" min="0" placeholder="(0-3) Number of major vessels">
               </div>
               </div>
             </div>
