--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         </div>
         <div id="box-area">
         <header>
-          <div class="d-flex justify-content-end container top_bar">
+          <div class="d-flex justify-content-end container top_bar pt-2">
             <ion-icon name="call" class="icon_position"></ion-icon> +92 324 4064060&nbsp;&nbsp;
             <ion-icon name="mail" class="icon_position"></ion-icon> Azeemaj101@gmail.com
           </div>
