--- a/templates/index.html
+++ b/templates/index.html
@@ -182,7 +182,7 @@
         <script>
           var typed = new Typed('.box', {
           strings: ['Age', 'Sex', 'Chest pain type (4 values)', 'Resting blood pressure',
-        "Serum cholestoral in mg/dl","Fasting blood sugar > 120 mg/dl","Resting electrocardiographic results (values 0,1,2)","Maximum heart rate achieved","Exercise induced angina","Oldpeak","The slope of the peak exercise ST segment","Number of major vessels (0-3)","Thal"],
+        "Serum cholestoral in mg/dl","Fasting blood sugar > 120 mg/dl","Resting electrocardiographic","Maximum heart rate achieved","Exercise induced angina","Oldpeak","The slope of the peak exercise ST segment","Number of major vessels (0-3)","Thal"],
           typeSpeed: 40,
           backspaceSpeed: 20,
           backspaceDelay: 80,
