--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         </div>
         <div id="box-area">
         <header>
-          <div class="d-flex justify-content-end container top_bar pt-2">
+          <div class="d-flex justify-content-end container top_bar pt-1 pb-1">
             <ion-icon name="call" class="icon_position"></ion-icon> +92 324 4064060&nbsp;&nbsp;
             <ion-icon name="mail" class="icon_position"></ion-icon> Azeemaj101@gmail.com
           </div>
@@ -46,8 +46,8 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="https://github.com/Azeemaj101/Heart_Disease_Prediction_Flask_ML/blob/main/heart.csv">Dataset</a>
                             </li>
-                            <li class="nav-item" href="https://github.com/Azeemaj101/Heart_Disease_Prediction_Flask_ML/blob/main/Heart_Model_Full.ipynb">
-                                <a class="nav-link">NoteBook</a>
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://github.com/Azeemaj101/Heart_Disease_Prediction_Flask_ML/blob/main/Heart_Model_Full.ipynb">NoteBook</a>
                             </li>
                         </ul>
                             <a href="https://github.com/Azeemaj101" target="_blank" rel="noopener noreferrer">
