--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
         <header>
           <div class="d-flex justify-content-end container top_bar pt-1 pb-1">
             <ion-icon name="call" class="icon_position"></ion-icon> +92 324 4064060&nbsp;&nbsp;
-            <ion-icon name="mail" class="icon_position"></ion-icon> Azeemaj101@gmail.com
+            <ion-icon name="mail" class="icon_position"></ion-icon>&nbspAzeemaj101@gmail.com
           </div>
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: black;">
                 <div class="container">
@@ -124,7 +124,7 @@
               </div>
               <div class="col">
                 <label class="form-label fw-bold">Oldpeak</label>
-                <input type="number" class="form-control" name="oldpeak" required id="oldpeak" max="10" min="0" placeholder="(0 to 10) Oldpeak">
+                <input type="number" class="form-control" name="oldpeak" required id="oldpeak" step="0.01" max="10" min="0" placeholder="Float(0 to 10) Oldpeak">
               </div>
               </div>
             </div>
